--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DreamTrip</title>
+    <title>Tabloide</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   
-  <body style="background: url('/bg/bg1.jpg') no-repeat center center">
+  <body style="background: url('/bg/bg1.jpg') no-repeat">
     <div class="row">
       <div class="col-lg-12">
         <div class="container centered">
